# WUT-Thesis

./: bibliografia.bib  main.tex  pyproject.toml
src/: wut-thesis.cls
tex/: 01-motivation.tex  02-goal.tex  03-modifying-qemu.tex  04-running-penpointos-on-freedos.tex  05-summary.tex  06-conclusions.tex
tex/code/: CLGD6410.java  IMouseHandler.java  Intel82360SL.java  Kconfig  NCR3125.java  NCRWacom.java  PC.java  PCConfig.java  edu.c  meson.build  ps2-new.c  ps2-old.c  spice-input.c  test-device.c  virsh-domxml-to-native.sh  virsh-dumpxml.xml
